# colcon-fish

./: README.md  README.rst  publish-python.yaml  setup.cfg  stdeb.cfg
colcon_fish/: __init__.py
colcon_fish/shell/: __init__.py  fish.py
colcon_fish/shell/template/: hook_append_value.fish.em  hook_prepend_value.fish.em  hook_set_value.fish.em  package.fish.em  prefix.fish.em  prefix_chain.fish.em  prefix_util.py.em
docs/: design.md  install.md  usage.md
scripts/: publish.sh
test/: spell_check.words  test_spell_check.py
test/workspace/src/hello_fish/: CMakeLists.txt  package.xml
test/workspace/src/hello_fish/src/: hello_fish_node.cpp
