[metadata]
name = colcon-fish
version = attr: colcon_fish.__version__
url = https://colcon.readthedocs.io
project_urls =
  Changelog = https://github.com/colcon/colcon-fish/milestones?direction=desc&sort=due_date&state=closed
  GitHub = https://github.com/colcon/colcon-fish/
author = sunrisepeak
author_email = speakshen@163.com
classifiers =
  Development Status :: 3 - Alpha
  Environment :: Plugins
  Intended Audience :: Developers
  Operating System :: MacOS
  Operating System :: POSIX
  Programming Language :: Python
  Topic :: Software Development :: Build Tools
license = Apache-2.0
description = Extension for colcon to support the fish shell.
long_description = file: README.rst
keywords = colcon

[options]
python_requires = >=3.6
install_requires =
  colcon-core
packages = find:
zip_safe = true

[options.extras_require]
test =
  flake8>=3.6.0
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pylint
  pytest
  pytest-cov
  scspell3k>=2.2

[tool:pytest]
junit_suite_name = colcon-fish
markers =
  flake8
  linter

[options.entry_points]
colcon_core.shell =
  fish = colcon_fish.shell.fish:FishShell

[flake8]
import-order-style = google

[coverage:run]
source = colcon_fish
